[package]
name = "async-fred-session"
version = "0.1.4"
authors = ["brkp <brkp@tutanota.com>"]
edition = "2021"
description = "redis session store for async-session backed by fred.rs"
repository = "https://github.com/brkp/async-fred-session"
license = "MIT"
keywords = ["sessions", "tokio", "async-session", "redis"]
categories = ["web-programming::http-server", "web-programming", "database"]

[dependencies]
async-session = "3.0.0"
fred = "6.0.0"
futures = "0.3.25"

[dev-dependencies]
tokio = { version = "1.24.2", features = ["macros"]}
